cuneiform-core/target/generated-sources/antlr4/de/huberlin/wbi/cuneiform/core/parser/CuneiformParser.java
// Generated from de/huberlin/wbi/cuneiform/core/parser/Cuneiform.g4 by ANTLR 4.2
package de.huberlin.wbi.cuneiform.core.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CuneiformParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		APPLY=1, COLON=2, COMB=3, COMBR=4, CURRY=5, DEFTASK=6, EQUAL=7, ELSE=8, 
		FROMSTACK=9, IF=10, IN=11, IMPORT=12, INCLUDE=13, LAMBDA=14, LBRACE=15, 
		LPAREN=16, LSQUAREBR=17, LTAG=18, NIL=19, PERM=20, RBRACE=21, RPAREN=22, 
		RSQUAREBR=23, RTAG=24, SEMICOLON=25, TILDE=26, THEN=27, TOSTACK=28, VAR=29, 
		INT=30, BODY=31, OPENBODY=32, STRING=33, COMMENT=34, ID=35, WS=36;
	public static final String[] tokenNames = {
		"<INVALID>", "'apply'", "':'", "'comb'", "'combr'", "'curry'", "'deftask'", 
		"'='", "'else'", "FROMSTACK", "'if'", "'in'", "'import'", "'include'", 
		"'\\'", "'{'", "'('", "'['", "'<'", "'nil'", "'perm'", "'}'", "')'", "']'", 
		"'>'", "';'", "'~'", "'then'", "TOSTACK", "'var'", "INT", "BODY", "OPENBODY", 
		"STRING", "COMMENT", "ID", "WS"
	};
	public static final int
		RULE_script = 0, RULE_stat = 1, RULE_instat = 2, RULE_importFile = 3, 
		RULE_assign = 4, RULE_defTask = 5, RULE_prototype = 6, RULE_name = 7, 
		RULE_param = 8, RULE_draw = 9, RULE_output = 10, RULE_reduceVar = 11, 
		RULE_correlParam = 12, RULE_expr = 13, RULE_danglingExpr = 14, RULE_singleExpr = 15, 
		RULE_channel = 16, RULE_block = 17, RULE_paramBind = 18, RULE_target = 19, 
		RULE_foreignBody = 20;
	public static final String[] ruleNames = {
		"script", "stat", "instat", "importFile", "assign", "defTask", "prototype", 
		"name", "param", "draw", "output", "reduceVar", "correlParam", "expr", 
		"danglingExpr", "singleExpr", "channel", "block", "paramBind", "target", 
		"foreignBody"
	};

	@Override
	public String getGrammarFileName() { return "Cuneiform.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CuneiformParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CuneiformParser.EOF, 0); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APPLY) | (1L << CURRY) | (1L << DEFTASK) | (1L << FROMSTACK) | (1L << IF) | (1L << IMPORT) | (1L << INCLUDE) | (1L << LAMBDA) | (1L << LSQUAREBR) | (1L << NIL) | (1L << INT) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(42); stat();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ImportFileContext importFile() {
			return getRuleContext(ImportFileContext.class,0);
		}
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstatContext instat() {
			return getRuleContext(InstatContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(56);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50); target();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51); importFile();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52); instat();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(53); expr();
				 notifyErrorListeners( "Dangling expression. Expecting ';' or '-+'." ); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstatContext extends ParserRuleContext {
		public DefTaskContext defTask() {
			return getRuleContext(DefTaskContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DanglingExprContext danglingExpr() {
			return getRuleContext(DanglingExprContext.class,0);
		}
		public InstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterInstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitInstat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitInstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstatContext instat() throws RecognitionException {
		InstatContext _localctx = new InstatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instat);
		try {
			setState(61);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58); assign();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59); defTask();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60); danglingExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportFileContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(CuneiformParser.SEMICOLON, 0); }
		public TerminalNode IMPORT() { return getToken(CuneiformParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(CuneiformParser.STRING, 0); }
		public TerminalNode INCLUDE() { return getToken(CuneiformParser.INCLUDE, 0); }
		public ImportFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterImportFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitImportFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitImportFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportFileContext importFile() throws RecognitionException {
		ImportFileContext _localctx = new ImportFileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !(_la==IMPORT || _la==INCLUDE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(64); match(STRING);
			setState(65); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(CuneiformParser.EQUAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(CuneiformParser.SEMICOLON, 0); }
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67); name();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(72); match(EQUAL);
			setState(73); expr();
			setState(74); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefTaskContext extends ParserRuleContext {
		public DefTaskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defTask; }
	 
		public DefTaskContext() { }
		public void copyFrom(DefTaskContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefTaskErr3Context extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public TerminalNode RBRACE() { return getToken(CuneiformParser.RBRACE, 0); }
		public PrototypeContext prototype() {
			return getRuleContext(PrototypeContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CuneiformParser.LBRACE, 0); }
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public DefTaskErr3Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterDefTaskErr3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitDefTaskErr3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitDefTaskErr3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NativeDefTaskContext extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public TerminalNode RBRACE() { return getToken(CuneiformParser.RBRACE, 0); }
		public PrototypeContext prototype() {
			return getRuleContext(PrototypeContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CuneiformParser.LBRACE, 0); }
		public List<InstatContext> instat() {
			return getRuleContexts(InstatContext.class);
		}
		public InstatContext instat(int i) {
			return getRuleContext(InstatContext.class,i);
		}
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public NativeDefTaskContext(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterNativeDefTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitNativeDefTask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitNativeDefTask(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FnPrototypeErr3Context extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public TerminalNode RPAREN(int i) {
			return getToken(CuneiformParser.RPAREN, i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public TerminalNode LPAREN() { return getToken(CuneiformParser.LPAREN, 0); }
		public TerminalNode COLON() { return getToken(CuneiformParser.COLON, 0); }
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(CuneiformParser.RPAREN); }
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public FnPrototypeErr3Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterFnPrototypeErr3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitFnPrototypeErr3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitFnPrototypeErr3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefTaskErr1Context extends DefTaskContext {
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public DefTaskErr1Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterDefTaskErr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitDefTaskErr1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitDefTaskErr1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FnPrototypeErr2Context extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public TerminalNode LPAREN() { return getToken(CuneiformParser.LPAREN, 0); }
		public TerminalNode COLON() { return getToken(CuneiformParser.COLON, 0); }
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public FnPrototypeErr2Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterFnPrototypeErr2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitFnPrototypeErr2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitFnPrototypeErr2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefTaskErr2Context extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public PrototypeContext prototype() {
			return getRuleContext(PrototypeContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CuneiformParser.LBRACE, 0); }
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public DefTaskErr2Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterDefTaskErr2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitDefTaskErr2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitDefTaskErr2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FnPrototypeErr1Context extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(CuneiformParser.LPAREN, 0); }
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public FnPrototypeErr1Context(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterFnPrototypeErr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitFnPrototypeErr1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitFnPrototypeErr1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForeignDefTaskContext extends DefTaskContext {
		public TerminalNode ID() { return getToken(CuneiformParser.ID, 0); }
		public PrototypeContext prototype() {
			return getRuleContext(PrototypeContext.class,0);
		}
		public ForeignBodyContext foreignBody() {
			return getRuleContext(ForeignBodyContext.class,0);
		}
		public TerminalNode DEFTASK() { return getToken(CuneiformParser.DEFTASK, 0); }
		public ForeignDefTaskContext(DefTaskContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).enterForeignDefTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuneiformListener ) ((CuneiformListener)listener).exitForeignDefTask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuneiformVisitor ) return ((CuneiformVisitor<? extends T>)visitor).visitForeignDefTask(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefTaskContext defTask() throws RecognitionException {
		DefTaskContext _localctx = new DefTaskContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defTask);
		int _la;
		try {
			int _alt;
			setState(151);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new NativeDefTaskContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76); match(DEFTASK);
				setState(77); match(ID);
				setState(78); prototype();
				setState(79); match(LBRACE);
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(80); instat();
					}
					}
					setState(83); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APPLY) | (1L << CURRY) | (1L << DEFTASK) | (1L << FROMSTACK) | (1L << IF) | (1L << LAMBDA) | (1L << LSQUAREBR) | (1L << NIL) | (1L << INT) | (1L << STRING) | (1L << ID))) != 0) );
				setState(85); match(RBRACE);
				}
				break;

			case 2:
				_localctx = new ForeignDefTaskContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87); match(DEFTASK);
				setState(88); match(ID);
				setState(89); prototype();
				setState(90); foreignBody();
				}
				break;

			case 3:
				_localctx = new DefTaskErr1Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(92); match(DEFTASK);
				 notifyErrorListeners( "Incomplete Task definition. Task name expected." ); 
				}
				break;

			case 4:
				_localctx = new DefTaskErr2Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(94); match(DEFTASK);
				setState(95); match(ID);
				setState(96); prototype();
				setState(97); match(LBRACE);
				 notifyErrorListeners( "Missing '}'." ); 
				}
				break;

			case 5:
				_localctx = new DefTaskErr3Context(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(100); match(DEFTASK);
				setState(101); match(ID);
				setState(102); prototype();
				setState(103); match(LBRACE);
				setState(104); match(RBRACE);
				 notifyErrorListeners( "Empty native task block." ); 
				}
				break;

			case 6:
				_localctx = new FnPrototypeErr1Context(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(107); match(DEFTASK);
				setState(108); match(ID);
				setState(109); match(LPAREN);
				 notifyErrorListeners( "Incomplete task prototype. Expecting at least one output variable declaration." ); 
				}
				break;
